--- a/SalesEdge/Info.plist
+++ b/SalesEdge/Info.plist
@@ -28,7 +28,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string>The camera neet to scan QRCode</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>You can select photos to attach to reports.</string>
+	<string>Get Photo</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
